--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,8 @@ version: 0.2
 env:
   variables:
     AWS_REGION: "us-west-1"
-    REACT_APP_API_SERVICE_URL: "http://localhost:5004"
+#    REACT_APP_API_SERVICE_URL: "http://localhost:5004"
+    REACT_APP_API_SERVICE_URL: "flask-react-alb-888601929.us-west-1.elb.amazonaws.com"
 
 phases:
   pre_build:
